# openaws-vpn-client

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  flake.nix  openaws-vpn-client.nix  opensaws-vpn-client.nix  openvpn.nix  rust-toolchain.toml
musl/: Dockerfile
scripts/: patch-openvpn.sh
share/: pwd.txt
src/: app.rs  cmd.rs  config.rs  consts.rs  dns.rs  handlers.rs  local_config.rs  log.rs  main.rs  manager.rs  saml_server.rs  state_manager.rs  task.rs
