cargo-features = ["strip"]

[package]
name = "openaws-vpn-client"
version = "0.1.1"
edition = "2021"
authors = ["KoresFramework", "Jonathan H. R. Lopes <jhrldev@gmail.com>"]
license = "MIT"

#

description = "Unofficial open-source AWS VPN client written in Rust"
homepage = "https://github.com/JonathanxD/openaws-vpn-client"
repository = "https://github.com/JonathanxD/openaws-vpn-client"
readme = "README.md"
keywords = ["vpn", "openaws", "vpn-client"]
categories = ["gui"]
documentation = "https://docs.rs/openaws-vpn-client/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "=0.14.3"
lazy_static = "=1.4.0"
tokio = { version = "=1.14.0", features = ["full"] }
warp = "=0.3"
dirs = "=4.0.0"
domain = { version = "=0.6.1", features = ["tokio", "resolv"] }
rand = "=0.8.4"
hex = "=0.4.3"
open = "=2.0.2"
tokio-stream = "=0.1.8"
temp-dir = "=0.1.11"
ctrlc = "=3.2.1"

[profile.release]
strip = "symbols"